--- a/index.html
+++ b/index.html
@@ -98,13 +98,9 @@
         
       </div>
 
-      <div class="form">
-
-        <div data-tf-widget="igoO4ScX" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
-
-      </div>
-
       <footer>
+
+        <div data-tf-widget="igoO4ScX" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js" class="formulaire"></script>
 
         <div class="border">
           <h1>Nous contacter</h1>
