--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
       <footer>
 
         <div data-tf-widget="igoO4ScX" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js" class="formulaire"></script>
-        
-        <div class="border">
+
+        <div class="foot border">
           <h1>Nous contacter</h1>
           <p>Email : supercar.seller@gmail.com</p>
           <p>Tél : 06-00-00-00-00</p>
           <p>Adresse : 100 rue du Général de Gaulle</p>
         </div>
 
-        <div class="border">
+        <div class="foot border">
           <h1>Conseils d'achat</h1>
           <p>Configurer votre voiture</p>
           <p>Comparer nos modèles</p>
@@ -117,7 +117,7 @@
           <p>Chercher un centre près de chez vous</p>
         </div>
 
-        <div>
+        <div class="foot">
           <h1>La société</h1>
           <p>Qui sommes nous</p>
           <p>Notre histoire</p>
