--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>www.porsche.fr</title>
+    <title>www.supercars-seller.fr</title>
     <link rel="stylesheet" type="text/css" href="style/banner.css">
     <link rel="stylesheet" type="text/css" href="style/container.css">
     <link rel="stylesheet" type="text/css" href="style/footer.css">
