--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         
       </div>
 
-      <footer>
+      <footer class="footer">
 
         <div data-tf-widget="igoO4ScX" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js" class="formulaire"></script>
 
